--- a/ArchitectureSampleWithFirebase/Base.lproj/Main.storyboard
+++ b/ArchitectureSampleWithFirebase/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hfq-eQ-L8M">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hfq-eQ-L8M">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,32 +17,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sey-D3-ncA">
-                                <rect key="frame" x="40" y="114" width="295" height="30"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="40" y="94" width="295" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="06p-ll-ABj">
-                                <rect key="frame" x="40" y="174" width="295" height="30"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="40" y="158" width="295" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="da9-1U-AND">
-                                <rect key="frame" x="168" y="314" width="38" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="da9-1U-AND">
+                                <rect key="frame" x="168.5" y="302" width="38" height="30"/>
                                 <state key="normal" title="Login"/>
                                 <connections>
                                     <action selector="loginButtonTapped" destination="biN-Ex-Dhc" eventType="touchUpInside" id="xOF-nw-lpe"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7L4-QV-Ppp">
-                                <rect key="frame" x="161" y="254" width="52" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7L4-QV-Ppp">
+                                <rect key="frame" x="161.5" y="242" width="52" height="30"/>
                                 <state key="normal" title="Sign up"/>
                                 <connections>
                                     <action selector="signUpButtonTapped" destination="biN-Ex-Dhc" eventType="touchUpInside" id="oFK-u7-FlN"/>
                                 </connections>
                             </button>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="zCl-2Q-pbH"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="da9-1U-AND" firstAttribute="centerX" secondItem="NMa-sh-SAH" secondAttribute="centerX" id="030-ut-CwA"/>
@@ -59,7 +57,6 @@
                             <constraint firstItem="zCl-2Q-pbH" firstAttribute="trailing" secondItem="Sey-D3-ncA" secondAttribute="trailing" constant="40" id="uxH-pW-4yq"/>
                             <constraint firstItem="7L4-QV-Ppp" firstAttribute="top" secondItem="06p-ll-ABj" secondAttribute="bottom" constant="50" id="zSl-tc-q0O"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="zCl-2Q-pbH"/>
                     </view>
                     <navigationItem key="navigationItem" title="Signup" id="TXl-4I-g5D"/>
                     <connections>
@@ -76,16 +73,16 @@
         <!--List View Controller-->
         <scene sceneID="ns6-SH-udc">
             <objects>
-                <viewController id="c5f-3z-sNd" customClass="ListViewController" customModule="ArchitectureSampleWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="c5f-3z-sNd" customClass="ListViewController" customModule="ArchitectureSampleWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bai-J6-OAn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="r6j-mA-ucG">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1tP-ut-kBI">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1tP-ut-kBI">
                                 <rect key="frame" x="315" y="607" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="Fhs-Wj-R00"/>
@@ -98,6 +95,7 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="kG7-Au-GS1"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="r6j-mA-ucG" firstAttribute="top" secondItem="kG7-Au-GS1" secondAttribute="top" id="APR-PJ-EAJ"/>
@@ -107,7 +105,6 @@
                             <constraint firstItem="kG7-Au-GS1" firstAttribute="bottom" secondItem="1tP-ut-kBI" secondAttribute="bottom" constant="10" id="m6Y-pp-ofW"/>
                             <constraint firstItem="kG7-Au-GS1" firstAttribute="trailing" secondItem="1tP-ut-kBI" secondAttribute="trailing" constant="10" id="plQ-PJ-YDa"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="kG7-Au-GS1"/>
                     </view>
                     <connections>
                         <outlet property="addButton" destination="1tP-ut-kBI" id="bdm-2Z-4yn"/>
@@ -128,25 +125,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BDN-XE-CE2">
-                                <rect key="frame" x="40" y="114" width="295" height="30"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="40" y="94" width="295" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YKx-Cr-WXw">
-                                <rect key="frame" x="40" y="174" width="295" height="30"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="40" y="158" width="295" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qPE-oN-idK">
-                                <rect key="frame" x="168" y="264" width="38" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qPE-oN-idK">
+                                <rect key="frame" x="168.5" y="252" width="38" height="30"/>
                                 <state key="normal" title="Login"/>
                                 <connections>
                                     <action selector="loginButtonTapped" destination="WgQ-Ut-bt6" eventType="touchUpInside" id="bg8-Pd-6v4"/>
                                 </connections>
                             </button>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="1oq-mJ-TA3"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="YKx-Cr-WXw" firstAttribute="top" secondItem="BDN-XE-CE2" secondAttribute="bottom" constant="30" id="6wj-5B-uqw"/>
@@ -160,7 +156,6 @@
                             <constraint firstItem="qPE-oN-idK" firstAttribute="centerX" secondItem="1un-j8-8mw" secondAttribute="centerX" id="ySd-wX-FX2"/>
                             <constraint firstItem="YKx-Cr-WXw" firstAttribute="leading" secondItem="1oq-mJ-TA3" secondAttribute="leading" constant="40" id="zvc-Yd-mea"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="1oq-mJ-TA3"/>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="3sV-9K-i1J"/>
                     <connections>
@@ -178,29 +173,29 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PostViewController" customModule="ArchitectureSampleWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k93-5B-XOl">
-                                <rect key="frame" x="50" y="91" width="275" height="30"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="50" y="71" width="275" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Post something!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYj-sj-cr3">
-                                <rect key="frame" x="125" y="50" width="124" height="21"/>
+                                <rect key="frame" x="125.5" y="30" width="124" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6io-Ar-Wqb">
-                                <rect key="frame" x="171.5" y="151" width="31" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6io-Ar-Wqb">
+                                <rect key="frame" x="172" y="135" width="31" height="30"/>
                                 <state key="normal" title="Post"/>
                                 <connections>
                                     <action selector="postButtonTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TgR-CA-cXm"/>
                                 </connections>
                             </button>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="pYj-sj-cr3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="8hI-De-rTW"/>
@@ -212,7 +207,6 @@
                             <constraint firstItem="pYj-sj-cr3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tvE-5i-8OX"/>
                             <constraint firstItem="6io-Ar-Wqb" firstAttribute="top" secondItem="k93-5B-XOl" secondAttribute="bottom" constant="30" id="ww3-Qt-cdV"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="textField" destination="k93-5B-XOl" id="p0K-53-iar"/>
@@ -228,7 +222,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hfq-eQ-L8M" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bm1-DG-B9N">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
